feat: add some words.

--- a/hangman/config/config.json
+++ b/hangman/config/config.json
@@ -106,6 +106,58 @@
     {
       "question": "content",
       "hint": "information, images, video, etc. that are included as part of something such as a website"
+    },
+    {
+      "question": "square",
+      "hint": "a flat shape with four sides of equal length and four angles of 90°"
+    },
+    {
+      "question": "wealth",
+      "hint": "a large amount of money or valuable possessions that someone has"
+    },
+    {
+      "question": "herder",
+      "hint": "a person who takes care of a large group of animals of the same type"
+    },
+    {
+      "question": "ancestor",
+      "hint": "a person related to you who lived a long time ago"
+    },
+    {
+      "question": "neighborhood",
+      "hint": "the area of a town that surrounds someone's home, or the people who live in this area"
+    },
+    {
+      "question": "algorithm",
+      "hint": "a set of mathematical instructions or rules that, especially if given to a computer, will help to calculate an answer to a problem"
+    },
+    {
+      "question": "gift",
+      "hint": "a present or something that is given"
+    },
+    {
+      "question": "author",
+      "hint": "the writer of a book, article, play, etc."
+    },
+    {
+      "question": "hometown",
+      "hint": "the town or city that a person is from, especially the one in which they were born and lived while they were young"
+    },
+    {
+      "question": "weekend",
+      "hint": "Saturday and Sunday, or Friday evening until Sunday night; the part of the week in which many people living in the West do not go to work"
+    },
+    {
+      "question": "software",
+      "hint": "the instructions that control what a computer does; computer programs"
+    },
+    {
+      "question": "server",
+      "hint": "a central computer from which other computers get information"
+    },
+    {
+      "question": "debug",
+      "hint": "to remove bugs (mistakes) from a computer program"
     }
   ]
 }
