feat: add loop for the secret words

--- a/hangman/config/config.json
+++ b/hangman/config/config.json
@@ -3,7 +3,7 @@
   "errorOrder": ["img", "head", "body", "l-arm", "r-arm", "l-leg", "r-leg"],
   "incorrectGuesses": 0,
   "keyPressed": [],
-  "wordsPast": [],
+  "questionsPast": [],
   "newQuestion": {},
   "keyboard": [
     [
