refactor: initGame take delay value from config

--- a/hangman/config/config.json
+++ b/hangman/config/config.json
@@ -5,6 +5,7 @@
   "keyPressed": [],
   "questionsPast": [],
   "newQuestion": {},
+  "delay": 100,
   "keyboard": [
     [
       {"title": "q", "code": "KeyQ"},
