--- a/nonograms/package.json
+++ b/nonograms/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "deploy": "npm run build && npx gh-pages -d dist -e nonograms"
   },
   "keywords": [],
   "author": "K98940",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "css-loader": "^6.9.1",
     "eslint": "^8.56.0",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
