--- a/news-api/.eslintrc.json
+++ b/news-api/.eslintrc.json
@@ -1,23 +1,25 @@
 {
-    "parser": "@typescript-eslint/parser",
+  "parser": "@typescript-eslint/parser",
 
-    "plugins": ["prettier", "import", "@typescript-eslint"],
-    "extends": ["plugin:prettier/recommended", "prettier", "plugin:@typescript-eslint/recommended"],
-    "parserOptions": {
-        "ecmaVersion": 2020,
-        "sourceType": "module"
-    },
-    "env": {
-        "es6": true,
-        "browser": true,
-        "node": true
-    },
-    "rules": {
-        "no-debugger": "off",
-        "no-console": 0,
-        "class-methods-use-this": "off",
-        "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/no-explicit-any": "error",
-        "@typescript-eslint/no-unused-vars": "warn"
-    }
+  "plugins": ["prettier", "import", "@typescript-eslint"],
+  "extends": ["plugin:prettier/recommended", "prettier", "plugin:@typescript-eslint/recommended"],
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
+  },
+  "rules": {
+    "no-tabs": "off",
+    "indent": "off",
+    "no-debugger": "off",
+    "no-console": 0,
+    "class-methods-use-this": "off",
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-unused-vars": "warn"
+  }
 }
