--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
-    "build": "webpack --config ./webpack.config.js --env mode=prod"
+    "build": "webpack --config ./webpack.config.js --env mode=prod",
+    "deploy": "npm run build && npx gh-pages -d dist -e rss-puzzle"
   },
   "keywords": [],
   "author": "K989",
@@ -28,6 +29,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-webpack-plugin": "^4.0.1",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.2",
