feat/async race 06/add buttons race and reset (#58)
* chore: temp commit

* refactor: refactor class Car and Garage

* feat: add buttons RACE and RESET

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,9 @@
   "extends": [
     "airbnb-typescript",
     "plugin:prettier/recommended",
-    "prettier",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "eslint-config-prettier",
+    "prettier"
   ],
   "parserOptions": {
     "ecmaVersion": 2020,
