--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "tabWidth": 2,
   "endOfLine": "crlf",
   "Semicolons": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 120
 }
