--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "files.eol": "\r\n",
-  "prettier.endOfLine": "crlf"
+  "prettier.endOfLine": "crlf",
+  "editor.wordWrapColumn": 120,
+  "editor.wordWrap": "wordWrapColumn"
 }
