--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,10 @@
 
   "plugins": ["prettier", "import", "@typescript-eslint"],
   "extends": [
-    "airbnb-typescript",
-    "plugin:prettier/recommended",
+    "airbnb-typescript/base",
     "plugin:@typescript-eslint/recommended",
     "eslint-config-prettier",
+    "plugin:prettier/recommended",
     "prettier"
   ],
   "parserOptions": {
