--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "rss-puzzle",
+  "name": "async-race",
   "version": "1.0.0",
   "description": "",
   "private": true,
   "scripts": {
     "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
     "build": "webpack --config ./webpack.config.js --env mode=prod",
-    "deploy": "npm run build && npx gh-pages -d dist -e rss-puzzle"
+    "deploy": "npm run build && npx gh-pages -d dist -e async-race",
+    "format": "npx prettier --write .",
+    "ci:format": "npx prettier --check .",
+    "lint": "npx eslint src/**/*.ts"
   },
   "keywords": [],
   "author": "K989",
