feat/fun chat/implement base api, state, route (#77)
* feat: add common api and state

* feat: add data to callback

* test: add simple test connect

* feat: add simple hash routing

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     ]
   },
   "validate-branch-name": {
-    "pattern": "(feat|fix|chore|refactor|init)/\\w+",
+    "pattern": "(feat|fix|chore|refactor|init)/\\w+/?\\w+",
     "errorMsg": "the branch name are not valid"
   },
   "devDependencies": {
