--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,6 +106,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true
   },
-  "include": ["src", "index.d.ts", ".eslintrc.json"],
+  "include": ["src/**/*", "index.d.ts", ".eslintrc.json"],
   "plugins": [{ "name": "typescript-plugin-css-modules" }]
 }
